[package]
name = "BlockUtils"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.13.3"

log = "0.4.19"
log4rs = "1.2.0"

serde = "1.0"
serde_json = "1.0"

anyhow = "1"
urlencoding = "2.1.2"

hex = "0.4.3"
sha2 = "0.10.7"
sha3 = "0.10.8"
digest = "0.10.7"
base58 = "0.2.0"
rlp = "0.5.2"
base64 = "0.21.2"

reqwest = { version = "0.12", features = ["json"] }

uuid = { version = "1.4.1", features = ["v4"] }

sqlx = { version = "0.8", features = [
    "postgres",
    "chrono",
    "bigdecimal",
    "runtime-async-std-native-tls",
    "uuid",
] }

redis = { version = "0.26", features = [
    "async-std-comp",
    "futures",
    "tokio",
    "aio",
    "json",
] }

chrono = {version = "0.4.26", features = ["serde"]}
bigdecimal = {version = "0.4", features = ["serde"]}

async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
futures = { version = "0.3" }
